# superset-sqlalchemy-adbc-flight-sql-poc

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  LICENSE.txt  README.md  RUNDOCKER.md  docker_build_and_push.sh  pyproject.toml  test_sqlalchemy_adbc_flight_sql_driver.py
.github/workflows/: build-docker-images.yml  release-please.yml
adbc_flight_sql_driver/: __init__.py
adbc_flight_sql_driver/tests/: conftest.py  test_basic.py
scripts/: build_arrow.sh  create_flight_sql_connection.py  start_superset.sh
superset_config_files/: setup.py  sql_lab.py
