[tool.poetry]
name = "adbc_flight_sql_driver"
version = "0.0.1"
description = "SQLAlchemy driver for ADBC with an Apache Arrow Flight SQL backend"
authors = ["Philip Moore <prmoore77@hotmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/prmoore77/sqlalchemy_flight_sql_driver"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/prmoore77/sqlalchemy_flight_sql_driver/issues"
"Changelog" = "https://github.com/prmoore77/sqlalchemy_flight_sql_driver/releases"

[tool.poetry.dependencies]
python = ">=3.9"
sqlalchemy = "^1.4.46"
numpy = "^1.23.5"
psycopg2 = "^2.9.5"
pyarrow = "^11.0.0"
adbc-driver-manager = "^0.3.0"
adbc-driver-flightsql = "^0.3.0"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pre-commit = "^2.20.0"
pdbpp = "^0.10.3"
mypy = "^0.991"
hypothesis = "^6.61.0"
pandas = "^1"
ipython-sql = "^0.4.1"
sqlalchemy = {version="^1.4.46", extras=['mypy']}
snapshottest = "^0.6.0"

[tool.poetry.plugins."sqlalchemy.dialects"]
adbc_flight_sql = "adbc_flight_sql_driver:Dialect"

[tool.pytest.ini_options]
addopts = "--hypothesis-show-statistics"
xfail_strict = true

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
warn_redundant_casts = true
warn_unused_ignores = true
plugins = ['sqlalchemy.ext.mypy.plugin']

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
